makes makefile ignore error codes on program execution

--- a/Projects/2/Makefile
+++ b/Projects/2/Makefile
@@ -13,7 +13,7 @@ OUTPUT = $(OUTPUT_DIR)/interp
 
 
 # object files
-_OBJECTS = interp.o stack.o symtab.o trim.o #parser.o symtab.o tree_node.o
+_OBJECTS = interp.o stack.o symtab.o trim.o parser.o tree_node.o
 OBJECTS = $(patsubst %,$(OBJECT_DIR)/%,$(_OBJECTS))
 
 _HEADERS = interp.h parser.h stack.h stack_node.h symtab.h tree_node.h
@@ -40,7 +40,7 @@ mem: all
 	valgrind --tool=memcheck --leak-check=full ./$(OUTPUT) ./sym.1 > /dev/null
 
 run: all
-	$(OUTPUT) ./sym.1
+	- $(OUTPUT) ./sym.1
 
 gdb: all
 	gdb $(OUTPUT)
