finishes homework 6. Fully functional, no memory leaks

--- a/Homeworks/6/Makefile
+++ b/Homeworks/6/Makefile
@@ -8,16 +8,20 @@ CC=gcc
 CFLAGS=-I$(INCLUDE_DIR) -std=c99 -pedantic -Wall -Wextra -g
 LIBS=-lm
 
+VAL = valgrind --tool=memcheck --leak-check=full -s
+
 # output
 OUTPUT1 = $(OUTPUT_DIR)/mapTest1
 OUTPUT2 = $(OUTPUT_DIR)/mapTest2
 OUTPUT3 = $(OUTPUT_DIR)/mapTest3
+OUTPUT4 = $(OUTPUT_DIR)/mytest
 OUTPUTS =  $(OUTPUT1) $(OUTPUT2) $(OUTPUT3)
 TEST_SCRIPT = ./RUN
 
+MEM_OUT = $(OUTPUT_DIR)/mem.txt
 
 # object files
-_OBJECTS = mapTest1.o mapTest2.o mapTest3.o mapADT.o
+_OBJECTS = mapTest1.o mapTest2.o mapTest3.o mapADT.o# mytest.o
 OBJECTS = $(patsubst %,$(OBJECT_DIR)/%,$(_OBJECTS))
 
 _HEADERS = mapADT.h
@@ -39,14 +43,29 @@ $(OUTPUT2): $(word 4, $(OBJECTS)) $(word 2, $(OBJECTS))
 $(OUTPUT3): $(word 4, $(OBJECTS)) $(word 3, $(OBJECTS))
 	$(CC) $(CFLAGS) $(LIBS) $(word 4, $(OBJECTS)) $(word 3, $(OBJECTS)) -o $(word 3, $(OUTPUTS))
 
+# $(OUTPUT4): $(word 4, $(OBJECTS)) $(word 5, $(OBJECTS))
+# 	$(CC) $(CFLAGS) $(LIBS) $(word 4, $(OBJECTS)) $(word 5, $(OBJECTS)) -o $(word 4, $(OUTPUTS))
+
 # clean: remove all object files and output, use -f option.
 .PHONY: clean run help gdb
 clean:
-	- rm -f $(OBJECT_DIR)/*.o $(OUTPUTS) /out.*
+	- rm -f $(OBJECT_DIR)/*.o $(OUTPUTS) /out.* $(MEM_OUT)
 
 # run valgrind to check for any issues
 mem: all
-	valgrind --tool=memcheck --leak-check=full ./$(OUTPUT) < $(TEST_FILE)> /dev/null
+	@echo "Testing mapTest1 for memory violations" > $(MEM_OUT)
+	@echo "===================================================================" >>$(MEM_OUT)
+	$(VAL) ./$(OUTPUT1) > /dev/null 2> $(MEM_OUT)
+	@echo "Testing mapTest2 for memory violations" >> $(MEM_OUT)
+	@echo "===================================================================" >>$(MEM_OUT)
+	$(VAL) ./$(OUTPUT2) > /dev/null 2>> $(MEM_OUT)
+	@echo "Testing mapTest3 for memory violations" >> $(MEM_OUT)
+	@echo "===================================================================" >>$(MEM_OUT)
+	$(VAL) ./$(OUTPUT3) > /dev/null 2>> $(MEM_OUT)
+	# @echo "Testing mytest for memory violations" >> $(MEM_OUT)
+	# @echo "===================================================================" >>$(MEM_OUT)
+	# $(VAL) ./$(OUTPUT4) > /dev/null 2>> $(MEM_OUT)
+	@cat $(MEM_OUT)
 
 run: all
 	cd $(OUTPUT_DIR);$(TEST_SCRIPT)
